--- a/src/assets/css/onap-styles.css
+++ b/src/assets/css/onap-styles.css
@@ -735,6 +735,7 @@ pre code {
   width: 100%;
   padding-right: 15px;
   padding-left: 15px;
+  min-width: 194px !important;
 }
 
 .col {
@@ -8277,7 +8278,7 @@ button.bg-dark:focus {
 
 .mt-2,
 .my-2 {
-  margin-top: 0.5rem !important;
+  margin-top: 0.375rem !important;
 }
 
 .mr-2,
@@ -8287,7 +8288,7 @@ button.bg-dark:focus {
 
 .mb-2,
 .my-2 {
-  margin-bottom: 0.5rem !important;
+  margin-bottom: 0.375rem !important;
 }
 
 .ml-2,
@@ -8508,7 +8509,7 @@ button.bg-dark:focus {
 
 .pl-5,
 .px-5 {
-  padding-left: 3rem !important;
+  padding-left: 2.25rem !important;
 }
 
 .m-n1 {
