Add generic inventory page that shows AAI data
Issue-ID: PORTALNG-131
Change-Id: I1c71785b02fc5f7f5721cbee0e11e74d39d79b38
Signed-off-by: Fiete Ostkamp <Fiete.Ostkamp@telekom.de>

--- a/src/app/components/layout/sidemenu/sidemenu.component.html
+++ b/src/app/components/layout/sidemenu/sidemenu.component.html
@@ -37,6 +37,13 @@
       >
     </li>
 
+    <li class="nav-item">
+      <a class="nav-link" routerLinkActive="active-menu-item" [routerLink]="['/inventory']">
+        <i class="bi bi-grid mr-4" aria-hidden="true"></i>
+        <span class="d-sm-inline qa_menu_inventory">{{ 'layout.menu.items.inventory' | translate }}</span></a
+      >
+    </li>
+
     <li class="nav-item" [appHasPermissions]="'users.administration.list'">
       <a class="nav-link" routerLinkActive="active-menu-item" routerLink="/user-administration">
         <i class="bi bi-people mr-4" aria-hidden="true"></i>
