Add playwright e2e tests
- define playwright tests in e2e folder
- remove protractor
- add e2e/compose folder that contains docker-compose.yaml [0]
- add e2e/wiremock folder that contains wiremock stubs

[0] The compose file contains keycloak and a keycloak-config-cli to import
    an onap realm with the portal-app client.
    It will also spin up the wiremock that is defined in e2e/wiremock

Issue-ID: PORTALNG-159
Change-Id: I5f85fb29ec4840ba053fc3a4b2a6828e1f8572f0
Signed-off-by: Fiete Ostkamp <fiete.ostkamp@telekom.de>

--- a/src/app/modules/dashboard/apps/user-last-action-tile/user-last-action-tile.component.html
+++ b/src/app/modules/dashboard/apps/user-last-action-tile/user-last-action-tile.component.html
@@ -63,7 +63,7 @@
         </div>
         <div class="card-body overflow-auto">
           <ng-container *ngIf="actions.length > 0; else noData">
-            <div *ngFor="let action of actions">
+            <div id="qa-div-action-rows" *ngFor="let action of actions">
               <app-action-row [action]="action">
                 <app-entity-user-administration-row
                   *ngIf="action.entity === EntityType.USERADMINISTRATION"
