Add tests for user-administration
- make dashboard test more reliable
- add tests for user administration table

Issue-ID: PORTALNG-160
Change-Id: Ia0de15c096f51f40b05feda17767663624979d2b
Signed-off-by: Fiete Ostkamp <fiete.ostkamp@telekom.de>

--- a/src/app/modules/user-administration/user-administration-list/user-administration-list.component.html
+++ b/src/app/modules/user-administration/user-administration-list/user-administration-list.component.html
@@ -35,7 +35,7 @@
       <span aria-current="page">{{ 'userAdministration.list.title' | translate }}</span>
     </app-breadcrumb-item>
   </app-breadcrumb>
-  <h2>{{ 'userAdministration.list.title' | translate }}</h2>
+  <h2 class="qa_user_administration_list_title">{{ 'userAdministration.list.title' | translate }}</h2>
   <hr />
   <div class="d-flex justify-content-between">
     <button
