--- a/src/app/modules/user-administration/user-administration-form/user-administration-form.component.html
+++ b/src/app/modules/user-administration/user-administration-form/user-administration-form.component.html
@@ -143,12 +143,12 @@
         <div class="col-xl-3 col-form-label">{{ 'userAdministration.form.headings.setRoles.title' | translate }}</div>
         <div class="col-xl-9">
           <div class="row" style="padding: 0 15px">
-            <div class="col-xl-5 p-3 border border-radius mb-md-2" style="min-height: 125px">
+            <div id="qa_available_roles_container" class="col-xl-5 p-3 border border-radius mb-md-2" style="min-height: 125px">
               <h5 class="qa_available_roles">
                 {{ 'userAdministration.form.headings.setRoles.available' | translate }}
               </h5>
               <ng-container *ngFor="let checkbox of checkBoxes.available">
-                <ng-container *ngIf="checkbox.name.startsWith('onap_')">
+                <ng-container *ngIf="checkbox.name.startsWith('portal_')">
                   <div class="form-check">
                     <input
                       type="checkbox"
@@ -163,10 +163,10 @@
               </ng-container>
             </div>
             <div class="col-xl-2"></div>
-            <div class="col-xl-5 p-3 border border-radius" style="min-height: 125px">
+            <div id="qa_assigned_roles_container" class="col-xl-5 p-3 border border-radius" style="min-height: 125px">
               <h5 class="qa_assigned_roles">{{ 'userAdministration.form.headings.setRoles.assigned' | translate }}</h5>
               <ng-container *ngFor="let checkbox of checkBoxes.assigned">
-                <ng-container *ngIf="checkbox.name.startsWith('onap_')">
+                <ng-container *ngIf="checkbox.name.startsWith('portal_')">
                   <div class="form-check">
                     <input
                       type="checkbox"
